fix tests with 2 roles